--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,13 @@ requires-python = ">=3.8"
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
+[project.scripts]
+clearscale = "clearscale.__main__:main"
+
+[project.optional-dependencies]
+dev = ["pytest", "colorama"]
+
+[project.dependencies]
+colorama = "^0.4"
+
